--- a/index.html
+++ b/index.html
@@ -1,239 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preload" href="/fonts/varela-round-v19-latin/varela-round-v19-latin-regular.woff2" as="font"
-    type="font/woff2" crossorigin>
-  <link rel="stylesheet" href="https://use.typekit.net/pwn2qzi.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.3/dist/css/splide.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.3/dist/js/splide.min.js"></script>
-  <script type="module" src="/main.js" defer></script>
-  <link rel="stylesheet" href="./fonts/css/all.css">
-  <link rel="stylesheet" href="./styles/style.css">
-  <link rel="icon" href="images/ShadowFavicon500px-150x150.png" sizes="32x32">
-  <title>Shadow Foundry | Technology Venture Studio</title>
+    <meta charset="UTF-8">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shadow Foundry | Venture Studio for Art & Technology</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
+<!--All content, images, and programming code Copyright 2022-2023, Shadow Foundry, Inc. All Rights Reserved.-->
+<!--https://shadowfoundry.ai-->
 <body>
-  <header class="header">
-
-    <div class="video__container">
-      <video class="header__video" autoplay muted playsinline loop>
-        <source src="images/ShadowFoundryBackgroundVideo.mp4"
-          type="video/mp4">
-      </video>
-
-    </div>
-
-    <div class="header__content">
-      <h1 class="header__title">BUILD ANYTHING.
-        CHANGE EVERYTHING.</h1>
-      <p class="header__subtitle">Shadow Foundry innovates and invests in revolutionary technologies.</p>
-      <a href="https://shadow.formaloo.net/wwwcontact" class="header__button cta__button">GET STARTED</a>
-    </div>
-  </header>
-  <main class="main">
-    <section class="sec1">
-      <h2 class="sec1__title">
-        APPROACH & PHILOSOPHY
-      </h2>
-      <div class="sec1__text">
-        <p class="sec1_paragraph">
-          Shadow Foundry provides high-level technical expertise to Web3 projects. For deep-tech startups, we help you
-          with
-          pre-seed funding: “get off the ground” money that happens at the idea stage, often before you have
-          incorporated.
-          For
-          non-profit and humanitarian organizations, we help you design, build, and deploy transformative technologies.
-          <br>
-          We are an activist firm and prefer to work intensively with every team in our portfolio. As such, we currently
-          choose to
-          limit our focus to just a handful of core projects each year. We believe the most promising ventures are
-          substantially
-          improved with our quality time and attention, and so we do not entertain ideas that are not fundamentally
-          disruptive.
-        </p>
-
-        <br>
-        <p class="sec1__paragraph-bold"><b>To connect with Shadow Foundry,</b> <a
-            href="https://shadow.formaloo.net/wwwcontact">drop us a line.</a> </p>
-        <br>
-        <p class="sec1__paragraph">Shadow Foundry’s mission is to change the world by de-risking revolutionary
-          technologies. As part of that commitment,
-          Shadow Foundry allocates a substantial portion of its portfolio towards capturing supererogatory asymmetry, a
-          special
-          situation where risk/reward calculations approach complex infinity. As a result, our portfolio may reflect an
-          asset
-          diversity uncorrelated with any other venture, technology, or investment firm.</p>
-      </div>
+    <header>
+        <h2><a href="#">Shadow Foundry</a></h2>
+        <ul class="nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Philosophy</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </header>
+    <section class="box">
+        <video src="ShadowFoundryBkrgdVideo.mp4" autoplay muted loop></video>
+        <h1>Build Anything.</h1><br>
+        <h1>Change Everything.</h1>
+        <a href="#" class="boxBtn">Get Started</a>
     </section>
-    <section class="sec2">
-      <h2 class="sec2__title">CAPABILITIES</h2>
-
-      <div class="sec2__container">
-        <ul class="sec2__list">
-          <li class="sec2__list-item"><i class="fa-solid fa-angle-right"></i>Web3 Advisory</li>
-          <li class="sec2__list-item"><i class="fa-solid fa-angle-right"></i>Blockchain DApps</li>
-          <li class="sec2__list-item"><i class="fa-solid fa-angle-right"></i>NFT Appraisals</li>
-          <li class="sec2__list-item"><i class="fa-solid fa-angle-right"></i>Asset Management</li>
-        </ul>
-        <ul class="sec2__list">
-          <li class="sec2__list-item"><i class="fa-solid fa-angle-right"></i>Mobile Apps</li>
-          <li class="sec2__list-item"><i class="fa-solid fa-angle-right"></i>Web Development</li>
-          <li class="sec2__list-item"><i class="fa-solid fa-angle-right"></i>Machine Learning</li>
-          <li class="sec2__list-item"><i class="fa-solid fa-angle-right"></i>Co-innovation</li>
-        </ul>
-        <ul class="sec2__list">
-          <li class="sec2__list-item"><i class="fa-solid fa-angle-right"></i>SBIR Consulting</li>
-          <li class="sec2__list-item"><i class="fa-solid fa-angle-right"></i>I-Corps Mentorship</li>
-          <li class="sec2__list-item"><i class="fa-solid fa-angle-right"></i>COMSEC Support</li>
-          <li class="sec2__list-item"><i class="fa-solid fa-angle-right"></i>Tactical CI Ops</li>
-        </ul>
-      </div>
-    </section>
-    <section class="sec3">
-      <h2 class="sec3__title">SELECTED PORTFOLIO</h2>
-      <span class="sec3__divider"></span>
-
-      <!--Carousel-->
-      <section class="splide" aria-label="Splide Basic HTML Example">
-        <div class="splide__track">
-          <ul class="splide__list">
-            <li class="splide__slide">
-              <figure>
-                <img src="./assets/Ethereum350-oyfpxrjy7me7yqcwxs7vt6c8gouzj6nvp1r5dgajc4.png" alt="">
-              </figure>
-            </li>
-            <li class="splide__slide">
-              <figure>
-                <img src="/assets/Monero350-oyfqkuha15zp20ty5re31cnplb3gjmaljagdm22ijo.png" alt="">
-              </figure>
-            </li>
-            <li class="splide__slide">
-              <figure>
-                <img src="/assets/ShadowFavicon500px-150x150.png" alt="">
-              </figure>
-            </li>
-            <li class="splide__slide">
-              <figure>
-                <img src="/assets/MindMed350-oyfpzlcni0wajfpc9knrnpqi1nuohzx3a3f4ytkz8k.png" alt="">
-              </figure>
-            </li>
-            <li class="splide__slide">
-              <figure>
-                <img src="/assets/Jiff350-oyfr6hphetmeere2rm7sye0u1qeqsp82uf9wgfz59g.png" alt="">
-              </figure>
-            </li>
-            <li class="splide__slide">
-              <figure>
-                <img src="/assets/Tesla350-oyfpz792niczpa9tjwkd4bal4vs6ajd485muro5vtw.png" alt="">
-              </figure>
-            </li>
-            <li class="splide__slide">
-              <figure>
-                <img src="/assets/Compass350-oyfq9hlhg8fyrnbvhcndepu76p2sja7cz2o5uowrqc.png" alt="">
-              </figure>
-            </li>
-            <li class="splide__slide">
-              <figure>
-                <img src="/assets/SOFI-350px-p1o8h3362yk1nplzlssmg0idwkpqmbdm23b8qm5x0k.png" alt="">
-              </figure>
-            </li>
-            <li class="splide__slide">
-              <figure>
-                <img src="/assets/Northwest350-oyfqv7n7ee6j37rwmqoz18hpfa06fgg1alg54wp7xg.png" alt="">
-              </figure>
-            </li>
-            <li class="splide__slide">
-              <figure>
-                <img src="/assets/Ehang350-oyfpyqbz8hptwayeap92vfkafy3kfzhy5tw44ouyxw.png" alt="">
-              </figure>
-            </li>
-          </ul>
-        </div>
-      </section>
-    </section>
-
-    <section class="cta">
-      <div class="cta__text">
-        <h3 class="cta__title">Connect with us today.</h3>
-        <p class="cta__subtitle">We work with teams of any size and budget, including solo founders and activists.</p>
-      </div>
-      <a href="https://shadow.formaloo.net/wwwcontact" class="cta__button">GET STARTED</a>
-    </section>
-  </main>
-  <footer class="footer">
-    <div class="footer__top">
-      <div class="footer__container">
-        <a href="/" class="footer__logo">
-          <img src="./assets/ShadowLogo-White_Stack130px.png" alt="Shadow Foundry logo">
-        </a>
-        <p class="footer__paragraph">We are a venture studio incubating and investing in Web3 technologies.</p>
-
-        <ul class="footer__list">
-          <li class="footer__list-item"><a href="https://www.facebook.com/shadowfoundry/"><a
-                href="https://dl.orangedox.com/AntiHarassmentPolicy"><img width="16" height="16" loading="lazy"
-                  src="./assets/fb16px.png" alt="Download PDF">/shadowfoundry</a></li>
-          <li class="footer__list-item"><a href="https://www.linkedin.com/company/shadowfoundry"><a
-                href="https://dl.orangedox.com/AntiHarassmentPolicy"><img width="16" height="16" loading="lazy"
-                  src="./assets/linkedin16px.png" alt="Download PDF">/company/shadowfoundry</a></li>
-          <li class="footer__list-item"><a href="https://www.instagram.com/shadowfoundry"><a
-                href="https://dl.orangedox.com/AntiHarassmentPolicy"><img width="16" height="16" loading="lazy"
-                  src="./assets/Insta16px.png" alt="Download PDF">@shadowfoundry</a></li>
-        </ul>
-      </div>
-      <div class="footer__container">
-        <h3 class="footer__h3">Corporate Governance</h3>
-        <ul class="footer__list">
-          <li class="footer__list-item"><a href="https://dl.orangedox.com/AntiHarassmentPolicy"><img width="16"
-                height="16" loading="lazy" src="./assets/pdfdownloadlight16.png" alt="Download PDF"> Anti-Harassment</a>
-          </li>
-          <li class="footer__list-item"><a href="https://dl.orangedox.com/PolicyREDiversityonBoard"><a
-                href="https://dl.orangedox.com/AntiHarassmentPolicy"><img width="16" height="16" loading="lazy"
-                  src="./assets/pdfdownloadlight16.png" alt="Download PDF">Diversity on
-                Board</a></li>
-        </ul>
-      </div>
-
-      <div class="footer__container">
-        <h3 class="footer__h3">Products</h3>
-        <ul class="footer__list">
-          <li class="footer__list-item"><a href="./"> <svg xmlns="http://www.w3.org/2000/svg" class="list-icon"
-                fill="#ffffff" width="15px" height="15px" viewBox="0 0 512 512">
-                <path
-                  d="M256.12 245.96c-13.25 0-24 10.74-24 24 1.14 72.25-8.14 141.9-27.7 211.55-2.73 9.72 2.15 30.49 23.12 30.49 10.48 0 20.11-6.92 23.09-17.52 13.53-47.91 31.04-125.41 29.48-224.52.01-13.25-10.73-24-23.99-24zm-.86-81.73C194 164.16 151.25 211.3 152.1 265.32c.75 47.94-3.75 95.91-13.37 142.55-2.69 12.98 5.67 25.69 18.64 28.36 13.05 2.67 25.67-5.66 28.36-18.64 10.34-50.09 15.17-101.58 14.37-153.02-.41-25.95 19.92-52.49 54.45-52.34 31.31.47 57.15 25.34 57.62 55.47.77 48.05-2.81 96.33-10.61 143.55-2.17 13.06 6.69 25.42 19.76 27.58 19.97 3.33 26.81-15.1 27.58-19.77 8.28-50.03 12.06-101.21 11.27-152.11-.88-55.8-47.94-101.88-104.91-102.72zm-110.69-19.78c-10.3-8.34-25.37-6.8-33.76 3.48-25.62 31.5-39.39 71.28-38.75 112 .59 37.58-2.47 75.27-9.11 112.05-2.34 13.05 6.31 25.53 19.36 27.89 20.11 3.5 27.07-14.81 27.89-19.36 7.19-39.84 10.5-80.66 9.86-121.33-.47-29.88 9.2-57.88 28-80.97 8.35-10.28 6.79-25.39-3.49-33.76zm109.47-62.33c-15.41-.41-30.87 1.44-45.78 4.97-12.89 3.06-20.87 15.98-17.83 28.89 3.06 12.89 16 20.83 28.89 17.83 11.05-2.61 22.47-3.77 34-3.69 75.43 1.13 137.73 61.5 138.88 134.58.59 37.88-1.28 76.11-5.58 113.63-1.5 13.17 7.95 25.08 21.11 26.58 16.72 1.95 25.51-11.88 26.58-21.11a929.06 929.06 0 0 0 5.89-119.85c-1.56-98.75-85.07-180.33-186.16-181.83zm252.07 121.45c-2.86-12.92-15.51-21.2-28.61-18.27-12.94 2.86-21.12 15.66-18.26 28.61 4.71 21.41 4.91 37.41 4.7 61.6-.11 13.27 10.55 24.09 23.8 24.2h.2c13.17 0 23.89-10.61 24-23.8.18-22.18.4-44.11-5.83-72.34zm-40.12-90.72C417.29 43.46 337.6 1.29 252.81.02 183.02-.82 118.47 24.91 70.46 72.94 24.09 119.37-.9 181.04.14 246.65l-.12 21.47c-.39 13.25 10.03 24.31 23.28 24.69.23.02.48.02.72.02 12.92 0 23.59-10.3 23.97-23.3l.16-23.64c-.83-52.5 19.16-101.86 56.28-139 38.76-38.8 91.34-59.67 147.68-58.86 69.45 1.03 134.73 35.56 174.62 92.39 7.61 10.86 22.56 13.45 33.42 5.86 10.84-7.62 13.46-22.59 5.84-33.43z">
-                </path>
-              </svg> NIGHTSHADE</a></li>
-          <li class="footer__list-item"><a href="./"><svg xmlns="http://www.w3.org/2000/svg" class="list-icon"
-                fill="#ffffff" width="15px" height="15px" viewBox="0 0 512 512">
-                <path
-                  d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z">
-                </path>
-              </svg>TIDE TIME</a></li>
-        </ul>
-      </div>
-
-      <div class="footer__container">
-        <h3 class="footer__h3">Privacy</h3>
-        <p class="footer__paragraph">This website uses cookies. <b>Continued use of this website
-            will be deemed as your
-            acceptance of this necessity</b>. Shadow
-          Foundry respects your privacy and never collects personally-identifiable information.</p>
-        <ul class="footer__list">
-          <li class="footer__list-item"><a href="./terms-and-conditions/">Terms of Use</a></li>
-          <li class="footer__list-item"><a href="./privacy-policy/">Privacy Policy</a></li>
-        </ul>
-
-      </div>
-
-    </div>
-    <div class="footer__copyright">
-      <p class="footer__paragraph">Made with ♥ in NYC. Copyright © 2022-2023 Shadow Foundry, Inc. All
-        Rights Reserved.</p>
-    </div>
-  </footer>
 </body>
-
 </html>
