--- a/index.html
+++ b/index.html
@@ -2,31 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shadow Foundry | Venture Studio for Art & Technology</title>
-    <link rel="stylesheet" href="style.css">
 </head>
-<!--All content, images, and programming code Copyright 2022-2023, Shadow Foundry, Inc. All Rights Reserved.-->
-<!--https://shadowfoundry.ai-->
 <body>
-    <header>
-        <h2><a href="#">Shadow Foundry</a></h2>
-        <ul class="nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Philosophy</a></li>
-            <li><a href="#">Contact</a></li>
+
+    <!--All content, images, and programming code Copyright 2022-2023, Shadow Foundry, Inc. All Rights Reserved.-->
+    <!--Github: shadow-foundry-->
+
+    <section class="showcase">
+        <header>
+            <a href="https://shadowfoundry.ai" class="logo"><img src="images/ShadowFoundry_Logo_White.png" alt="Shadow Foundry"></a>
+        </header>
+
+        <video src="ShadowFoundryBackgroundVideo.mp4" muted loop autoplay></video>
+
+        <div class="text">
+        <h2>Build Anything</h2>
+        <h2>Change Everything</h2>
+        <p>Shadow Foundry is a venture studio for deep technology and art.</p>
+        <a href="https://docs.shadowfoundry.ai/">
+        Learn More
+        </a>
+        </div>
+        <ul class="social">
+            <li><a href="https://www.twitter.com/blockchainsure"><img src="images/twitter25.png" alt="Twitter"></a></li>
+            <li><a href="https://www.reddit.com/r/blockchainsure"><img src="images/reddit25.png" alt="Reddit"></a></li>
+            <li><a href="https://www.github.com/blockchainsure"><img src="images/github25.png" alt="Github"></a></li>
         </ul>
-    </header>
-    <section class="box">
-        <video src="ShadowFoundryBkrgdVideo.mp4" autoplay muted loop></video>
-        <h1>Build Anything.</h1><br>
-        <h1>Change Everything.</h1>
-        <a href="#" class="boxBtn">Get Started</a>
+        <ul class="legal">
+            <li><img src="images/copyright120px.png" alt="Copyright"></li>
+            <li><a href="privacy.html"><img src="images/privacy.png" alt="Privacy Policy"></a></li>
+            <li><a href="terms.html"><img src="images/terms.png" alt="Terms and Conditions"></a></li>
+        </ul>
     </section>
 </body>
 </html>
