--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         </a>
         </div>
         <ul class="social">
-            <li><a href="https://www.twitter.com/blockchainsure"><img src="images/twitter25.png" alt="Twitter"></a></li>
-            <li><a href="https://www.reddit.com/r/blockchainsure"><img src="images/reddit25.png" alt="Reddit"></a></li>
-            <li><a href="https://www.github.com/blockchainsure"><img src="images/github25.png" alt="Github"></a></li>
+            <li><a href="https://www.twitter.com/"><img src="images/twitter25.png" alt="Twitter"></a></li>
+            <li><a href="https://www.reddit.com/"><img src="images/reddit25.png" alt="Reddit"></a></li>
+            <li><a href="https://www.github.com/"><img src="images/github25.png" alt="Github"></a></li>
         </ul>
         <ul class="legal">
             <li><img src="images/copyright120px.png" alt="Copyright"></li>
