--- a/index.html
+++ b/index.html
@@ -18,28 +18,22 @@
 
     <section class="showcase">
         <header>
-            <a href="https://shadowfoundry.ai" class="logo"><img src="images/ShadowFoundry_Logo_White.png" alt="Shadow Foundry"></a>
+            <a href="https://shadowfoundry.ai" class="logo"><img src="images/ShadowLogo150x50.png" alt="Shadow Foundry"></a>
         </header>
 
         <video src="ShadowFoundryBackgroundVideo.mp4" muted loop autoplay></video>
 
         <div class="text">
-        <h2>Build Anything</h2>
-        <h2>Change Everything</h2>
+        <h2>Build Anything.</h2>
+        <h2>Change Everything.</h2>
         <p>Shadow Foundry is a venture studio for deep technology and art.</p>
         <a href="https://docs.shadowfoundry.ai/">
-        Learn More
+        LEARN MORE
         </a>
         </div>
-        <ul class="social">
-            <li><a href="https://www.twitter.com/"><img src="images/twitter25.png" alt="Twitter"></a></li>
-            <li><a href="https://www.reddit.com/"><img src="images/reddit25.png" alt="Reddit"></a></li>
-            <li><a href="https://www.github.com/"><img src="images/github25.png" alt="Github"></a></li>
-        </ul>
         <ul class="legal">
-            <li><img src="images/copyright120px.png" alt="Copyright"></li>
-            <li><a href="privacy.html"><img src="images/privacy.png" alt="Privacy Policy"></a></li>
-            <li><a href="terms.html"><img src="images/terms.png" alt="Terms and Conditions"></a></li>
+            <li><img src="images/copyright150px_2023.png" alt="Copyright"></li>
+            <li><a href="https://docs.shadowfoundry.ai"><img src="images/Privacy&Terms200px.png" alt="Required Legal Notices"></a></li>
         </ul>
     </section>
 </body>
