--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+        <!--All content, images, and programming code Copyright 2022-2023, Shadow Foundry, Inc. All Rights Reserved.-->
+        <!--Github: shadow-foundry-->
     <title>Shadow Foundry | Venture Studio for Art & Technology</title>
 </head>
 <body>
 
-    <!--All content, images, and programming code Copyright 2022-2023, Shadow Foundry, Inc. All Rights Reserved.-->
-    <!--Github: shadow-foundry-->
-
     <section class="showcase">
         <header>
-            <a href="https://shadowfoundry.ai" class="logo"><img src="images/ShadowLogo150x50.png" alt="Shadow Foundry"></a>
+            <img src="images/ShadowLogo150x50.png" alt="Shadow Foundry">
         </header>
 
         <video src="ShadowFoundryBackgroundVideo.mp4" muted loop autoplay></video>
@@ -26,14 +25,14 @@
         <div class="text">
         <h2>Build Anything.</h2>
         <h2>Change Everything.</h2>
-        <p>Shadow Foundry is a venture studio for deep technology and art.</p>
+        <p>Shadow Foundry is a venture studio for deep technology and experimental art.</p>
         <a href="https://docs.shadowfoundry.ai/">
         LEARN MORE
         </a>
         </div>
         <ul class="legal">
             <li><img src="images/copyright150px_2023.png" alt="Copyright"></li>
-            <li><a href="https://docs.shadowfoundry.ai"><img src="images/Privacy&Terms200px.png" alt="Required Legal Notices"></a></li>
+            <li><a href="https://docs.shadowfoundry.ai"><img src="images/Privacy&Terms176px.png" alt="Required Legal Notices"></a></li>
         </ul>
     </section>
 </body>
