--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="text">
         <h2>Build Anything.</h2>
         <h2>Change Everything.</h2>
-        <p>Shadow Foundry is a venture studio for deep technology and experimental art.</p>
+        <p>Shadow Foundry is a venture studio for deep technology and generative art.</p>
         <a href="https://docs.shadowfoundry.ai/">
         LEARN MORE
         </a>
