--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-    <section class="showcase">
+    <section class="mainstage">
         <header>
             <img src="images/ShadowLogo150x50.png" alt="Shadow Foundry">
         </header>
@@ -26,13 +26,16 @@
         <h2>Build Anything.</h2>
         <h2>Change Everything.</h2>
         <p>Shadow Foundry is a venture studio for deep technology and generative art.</p>
-        <a href="https://docs.shadowfoundry.ai/">
-        LEARN MORE
-        </a>
+            <a href="https://docs.shadowfoundry.ai">LEARN MORE</a>
+        <!-- <btn><a href="https://docs.shadowfoundry.ai/">
+            LEARN MORE
+            </a></btn>
+        <a href="shadow.formaloo.net">GET IN TOUCH</a> -->
         </div>
+
         <ul class="legal">
             <li><img src="images/copyright150px_2023.png" alt="Copyright"></li>
-            <li><a href="https://docs.shadowfoundry.ai"><img src="images/Privacy&Terms176px.png" alt="Required Legal Notices"></a></li>
+            <li><a href="https://docs.shadowfoundry.ai"><img src="images/Privacy&Terms168px.png" alt="Required Legal Notices"></a></li>
         </ul>
     </section>
 </body>
