--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-    <section class="mainstage">
+    <section class="showcase">
         <header>
             <img src="images/ShadowLogo150x50.png" alt="Shadow Foundry">
         </header>
