--- a/index.html
+++ b/index.html
@@ -27,15 +27,12 @@
         <h2>Change Everything.</h2>
         <p>Shadow Foundry is a venture studio for deep technology and generative art.</p>
             <a href="https://docs.shadowfoundry.ai">LEARN MORE</a>
-        <!-- <btn><a href="https://docs.shadowfoundry.ai/">
-            LEARN MORE
-            </a></btn>
-        <a href="shadow.formaloo.net">GET IN TOUCH</a> -->
+           <!-- <a href="">GET IN TOUCH</a> -->
         </div>
 
         <ul class="legal">
             <li><img src="images/copyright150px_2023.png" alt="Copyright"></li>
-            <li><a href="https://docs.shadowfoundry.ai"><img src="images/Privacy&Terms176px.png" alt="Legal Notices"></a></li>
+            <li><a href="https://docs.shadowfoundry.ai"><img src="images/Privacy&Terms168px.png" alt="Legal Notices"></a></li>
         </ul>
     </section>
 </body>
