--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <ul class="legal">
             <li><img src="images/copyright150px_2023.png" alt="Copyright"></li>
-            <li><a href="https://docs.shadowfoundry.ai"><img src="images/Privacy&Terms168px.png" alt="Legal Notices"></a></li>
+            <li><a href="https://docs.shadowfoundry.ai"><img src="images/Privacy_Terms168px.png" alt="Legal Notices"></a></li>
         </ul>
     </section>
 </body>
