--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <h2>Build Anything.</h2>
         <h2>Change Everything.</h2>
         <p>Shadow Foundry is a venture studio for deep technology and generative art.</p>
-            <a href="https://docs.shadowfoundry.ai">LEARN MORE</a>
-           <!-- <a href="">GET IN TOUCH</a> -->
+            <a href="https://docs.shadowfoundry.ai" class="learn-more">LEARN MORE</a>
+            <a href="https://tplni2xs4l7.typeform.com/to/yG4g8jV9" class="get-in-touch">GET IN TOUCH &#10140;</a>
         </div>
 
         <ul class="legal">
             <li><img src="images/copyright150px_2023.png" alt="Copyright"></li>
-            <li><a href="https://docs.shadowfoundry.ai"><img src="images/Privacy_Terms168px.png" alt="Legal Notices"></a></li>
+            <li><a href="https://docs.shadowfoundry.ai/shadow-foundry/legal/"><img src="images/Privacy_Terms168px.png" alt="Legal Notices"></a></li>
         </ul>
     </section>
 </body>
