--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
             <img src="images/ShadowLogo150x50.png" alt="Shadow Foundry">
         </header>
 
-        <video src="ShadowFoundryBackgroundVideo.mp4" muted loop autoplay></video>
+        <video src="SF_2023BackgroundVideo_17mb.mp4" muted loop autoplay></video>
 
         <div class="text">
         <h2>Build Anything.</h2>
         <h2>Change Everything.</h2>
         <p>Shadow Foundry is a venture studio for deep technology and generative art.</p>
             <a href="https://docs.shadowfoundry.ai" class="learn-more">LEARN MORE</a>
-            <a href="https://tplni2xs4l7.typeform.com/to/yG4g8jV9" class="get-in-touch">GET IN TOUCH &#10140;</a>
+            <a href="https://tplni2xs4l7.typeform.com/to/yG4g8jV9" class="get-in-touch">CONTACT SF &#10140;</a>
         </div>
 
         <ul class="legal">
