--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <title>Shadow Foundry | Venture Studio for Art & Technology</title>
 </head>
 <body>
-
     <section class="showcase">
         <header>
             <img src="images/ShadowLogo150x50.png" alt="Shadow Foundry">
@@ -27,7 +26,7 @@
         <h2>Change Everything.</h2>
         <p>Shadow Foundry is a venture studio for deep technology and generative art.</p>
             <a href="https://docs.shadowfoundry.ai" class="learn-more">LEARN MORE</a>
-            <a href="https://tplni2xs4l7.typeform.com/to/yG4g8jV9" class="get-in-touch">CONTACT SF &#10140;</a>
+            <a href="https://shadow.formaloo.net/letstalk" class="get-in-touch">CONTACT SF &#10140;</a>
         </div>
 
         <ul class="legal">
