--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h2>Change Everything.</h2>
         <p>Shadow Foundry is a venture studio for deep technology and generative art.</p>
             <a href="https://docs.shadowfoundry.ai" class="learn-more">LEARN MORE</a>
-            <a href="https://shadow.formaloo.net/letstalk" class="get-in-touch">CONTACT SF &#10140;</a>
+            <a href="https://shadow.formaloo.net/letstalk" class="get-in-touch">CONTACT SF &#9656</a>
         </div>
 
         <ul class="legal">
