--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
             </a>
         </div>
           <form action="https://formsubmit.co/shadowfoundryinc@gmail.com" method="POST">
-              <h1>Contact Us</h1>
+              <h1>Contact SF</h1>
               <!-- tradecraft -->
               <input type="text" name="_privatekey" style="display: none;">
               <!-- disable captcha -->
