--- a/contact.html
+++ b/contact.html
@@ -21,12 +21,12 @@
           <form action="https://formsubmit.co/shadowfoundryinc@gmail.com" method="POST">
               <h1>Contact SF</h1>
               <!-- tradecraft -->
-              <input type="text" name="_privatekey" style="display: none;">
+            <!--  <input type="text" name="_privatekey" style="display: none;"> -->
               <!-- disable captcha -->
-              <input type="hidden" name="_captcha" value="false">
+            <!--  <input type="hidden" name="_captcha" value="false">  -->
               <!-- redirect -->
-              <input type="hidden" name="_next" value="https://shadowfoundry.ai/success.html">
-
+            <!--  <input type="hidden" name="_next" value="https://shadowfoundry.ai/success.html">  -->
+              
               <div class="input-group">
               <input type="text" id="Name" name="Name" maxlength="30" required>
               <label for="Name">First Name</label>
