--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,7 @@
               <!-- disable captcha -->
             <!--  <input type="hidden" name="_captcha" value="false">  -->
               <!-- redirect -->
-            <!--  <input type="hidden" name="_next" value="https://shadowfoundry.ai/success.html">  -->
-              
+                  <input type="hidden" name="_next" value="https://shadowfoundry.ai/success.html">
               <div class="input-group">
               <input type="text" id="Name" name="Name" maxlength="30" required>
               <label for="Name">First Name</label>
