--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
               <!-- disable captcha -->
               <input type="hidden" name="_captcha" value="false">
               <!-- redirect -->
-              <input type="hidden" name="_next" value="https://shadowfoundry.ai/success.html">
+              <input type="hidden" name="_next" value="https://www.google.com">
               
               <div class="input-group">
               <input type="text" id="Name" name="Name" maxlength="30" required>
