--- a/contact.html
+++ b/contact.html
@@ -18,14 +18,14 @@
             <img src="images/ShadowLogo150x50.png" width="150px" height="50px" style="position:absolute; top: 40px; left: 100px;" alt="Shadow Foundry">
             </a>
         </div>
-          <form action="https://formsubmit.co/shadowfoundryinc@gmail.com" method="POST">
+              <form action="https://formsubmit.co/shadowfoundryinc@gmail.com" method="POST" />
               <h1>Contact SF</h1>
               <!-- tradecraft -->
               <input type="text" name="_honey" style="display:none;">
               <!-- disable captcha -->
               <input type="hidden" name="_captcha" value="false">
               <!-- redirect -->
-              <input type="hidden" name="_next" value="https://www.google.com">
+              <input type="hidden" name="_next" value="https://shadowfoundry.ai/success.html">
               
               <div class="input-group">
               <input type="text" id="Name" name="Name" maxlength="30" required>
