--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
             <img src="images/ShadowLogo150x50.png" width="150px" height="50px" style="position:absolute; top: 40px; left: 100px;" alt="Shadow Foundry">
             </a>
         </div>
-              <form action="https://formsubmit.co/shadowfoundryinc@gmail.com" method="POST" />
+              <form action="https://formsubmit.co/811f48ce61f2e6974b9a1b37ddfa0b7d" method="POST" />
               <h1>Contact SF</h1>
               <!-- tradecraft -->
               <input type="text" name="_honey" style="display:none;">
