--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         </div>
               <form action="https://formsubmit.co/811f48ce61f2e6974b9a1b37ddfa0b7d" method="POST" />
               <h1>Contact SF</h1>
-              <!-- tradecraft -->
+              <!-- anti-nonsense -->
               <input type="text" name="_honey" style="display:none;">
               <!-- disable captcha -->
               <input type="hidden" name="_captcha" value="false">
