--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv=”Content-Security-Policy” content=”default-src 'none'; script-src 'self' ajax.cloudflare.com static.cloudflareinsights.com; connect-src 'self' cloudflareinsights.com; img-src 'self'; style-src 'self'; base-uri 'self'; form-action 'self'”>
+    <meta name="description" content="Shadow Foundry is a venture studio that innovates and invests in revolutionary technologies and AI-generated art.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
@@ -24,9 +26,9 @@
         <div class="text">
         <h2>Build Anything.</h2>
         <h2>Change Everything.</h2>
-        <p>Shadow Foundry is a venture studio for deep technology and generative art.</p>
+        <h1>Shadow Foundry is a venture studio for deep technology and generative art.</h1>
             <a href="https://docs.shadowfoundry.ai" class="learn-more">LEARN MORE</a>
-            <a href="https://shadowfoundry.ai/contact.html" class="get-in-touch">CONTACT SF &#9656</a>
+            <a href="https://shadowfoundry.ai/contact.html" class="get-in-touch">CONTACT SF &#10140;</a>
         </div>
 
         <ul class="legal">
