--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="text">
         <h2>Build Anything.</h2>
         <h2>Change Everything.</h2>
-        <h1>Shadow Foundry is a venture studio for deep technology and generative art.</h1>
+        <p>Shadow Foundry is a venture studio for deep technology and generative art.</p>
             <a href="https://docs.shadowfoundry.ai" class="learn-more">LEARN MORE</a>
             <a href="https://shadowfoundry.ai/contact.html" class="get-in-touch">CONTACT SF &#10140;</a>
         </div>
